force-app/main/default/objects/SBQQ__Quote__c/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
        <fullName>Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Quotes (Ship To Address)</relationshipLabel>
        <relationshipName>ShipToQuotes</relationshipName>
        <type>Lookup</type>
    </CustomField>