force-app/main/default/objects/SBQQ__Quote__c/fields/Ship_To_City__c.field-meta.xml
<CustomField>
        <fullName>Ship_To_City__c</fullName>
        <formula>Ship_To_Address__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To City</label>
        <type>Text</type>
    </CustomField>