force-app/main/default/objects/SBQQ__Quote__c/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
        <fullName>Ship_To_Country__c</fullName>
        <formula>TEXT(Ship_To_Address__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Country</label>
        <type>Text</type>
    </CustomField>