force-app/main/default/objects/SBQQ__Quote__c/fields/Ship_To_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>Ship_To_Postal_Code__c</fullName>
        <formula>Ship_To_Address__r.Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Postal Code</label>
        <type>Text</type>
    </CustomField>