force-app/main/default/objects/SBQQ__Quote__c/fields/Ship_To_State__c.field-meta.xml
<CustomField>
        <fullName>Ship_To_State__c</fullName>
        <formula>TEXT(Ship_To_Address__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To State</label>
        <type>Text</type>
    </CustomField>