force-app/main/default/objects/SBQQ__Quote__c/fields/Ship_To_Street_2__c.field-meta.xml
<CustomField>
        <fullName>Ship_To_Street_2__c</fullName>
        <formula>Ship_To_Address__r.Street_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Street 2</label>
        <type>Text</type>
    </CustomField>