force-app/main/default/objects/SBQQ__Quote__c/fields/Show_Additional_Discount__c.field-meta.xml
<CustomField>
        <fullName>Show_Additional_Discount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Additional Discount</label>
        <type>Checkbox</type>
    </CustomField>