force-app/main/default/objects/SBQQ__Quote__c/fields/Show_Net_Unit_Price__c.field-meta.xml
<CustomField>
        <fullName>Show_Net_Unit_Price__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Net Unit Price</label>
        <type>Checkbox</type>
    </CustomField>