force-app/main/default/objects/SBQQ__Quote__c/fields/Sold_to_Partner_Type__c.field-meta.xml
<CustomField>
        <fullName>Sold_to_Partner_Type__c</fullName>
        <formula>TEXT(SBQQ__Partner__r.Business_Partner_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold to Partner Type</label>
        <type>Text</type>
    </CustomField>