force-app/main/default/objects/SBQQ__Quote__c/fields/Subscription_Term_Days__c.field-meta.xml
<CustomField>
        <fullName>Subscription_Term_Days__c</fullName>
        <description>Different between Quote End Date and Quote Start Date. Used in approval process &#39;Selling Licenses for terms less than 1 year or above 3 years&#39;</description>
        <formula>SBQQ__EndDate__c - SBQQ__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Term Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>