force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Discount_3rd_Party_Products__c.field-meta.xml
<CustomField>
        <fullName>Total_Discount_3rd_Party_Products__c</fullName>
        <label>Total Discount 3rd Party Products Old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>