force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Discount_Premium_Care__c.field-meta.xml
<CustomField>
        <fullName>Total_Discount_Premium_Care__c</fullName>
        <label>Total Discount Premium Care</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>