force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Discount_Professional_Services__c.field-meta.xml
<CustomField>
        <fullName>Total_Discount_Professional_Services__c</fullName>
        <label>Total Discount Professional Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>