force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Discount_UiPath_List_Price_Pct__c.field-meta.xml
<CustomField>
        <fullName>Total_Discount_UiPath_List_Price_Pct__c</fullName>
        <description>Total Discount for UiPath Products (Total List Price vs Total Net Price)</description>
        <formula>IF(Total_List_Price_UiPath_Products__c &lt;&gt;0, ROUND(Total_Discount_UiPath_Products_List_Pric__c/Total_List_Price_UiPath_Products__c,4),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount UiPath Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>