force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Discount_UiPath_Products_Currency__c.field-meta.xml
<CustomField>
        <fullName>Total_Discount_UiPath_Products_Currency__c</fullName>
        <label>Total Discount UiPath Products Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>