force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Discount_UiPath_Products_Pct__c.field-meta.xml
<CustomField>
        <fullName>Total_Discount_UiPath_Products_Pct__c</fullName>
        <formula>IF(Total_Regular_Price_UiPath_Products__c &lt;&gt;0, ROUND(Total_Discount_UiPath_Products_Currency__c/Total_Regular_Price_UiPath_Products__c,4),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount UiPath Products (Reg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>