force-app/main/default/objects/SBQQ__Quote__c/fields/Total_List_Price_UiPath_Products__c.field-meta.xml
<CustomField>
        <fullName>Total_List_Price_UiPath_Products__c</fullName>
        <label>Total List Price UiPath Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>