force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Partner_Licenses__c.field-meta.xml
<CustomField>
        <fullName>Total_Partner_Licenses__c</fullName>
        <label>Total Partner Licenses</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Line_Product_Family__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>