force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Professional_Services_Training__c.field-meta.xml
<CustomField>
        <fullName>Total_Professional_Services_Training__c</fullName>
        <description>Sum of Total Professional Services and Training. Use in Quote Offer template condition.</description>
        <formula>Total_Professional_Service__c +  Total_Training__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Professional Services &amp; Training</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>