force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Training__c.field-meta.xml
<CustomField>
        <fullName>Total_Training__c</fullName>
        <label>Total Training</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Line_Product_Family__c</field>
            <operation>equals</operation>
            <value>Training</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>