force-app/main/default/objects/SBQQ__Quote__c/fields/Total_UiPath_Partner_Premium_Care__c.field-meta.xml
<CustomField>
        <fullName>Total_UiPath_Partner_Premium_Care__c</fullName>
        <description>Sum of &#39;Total UiPath Licenses&#39;, &#39;Total Partner Licenses&#39; and &#39;Total Premium Care&#39;. Used in Quote Offer document.</description>
        <formula>Total_UiPath_Licenses__c +  Total_Partner_Licenses__c +  Total_Premium_Care__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total UiPath Partner Premium Care</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>