force-app/main/default/objects/SBQQ__Quote__c/recordTypes/CPQ_Approved.recordType-meta.xml
<RecordType>
        <fullName>CPQ_Approved</fullName>
        <active>true</active>
        <description>Used for approved CPQ Quote</description>
        <label>CPQ Approved</label>
    </RecordType>