force-app/main/default/objects/SBQQ__Quote__c/recordTypes/CPQ_Default.recordType-meta.xml
<RecordType>
        <fullName>CPQ_Default</fullName>
        <active>true</active>
        <description>Used for non approved CPQ Quote</description>
        <label>CPQ Default</label>
    </RecordType>