force-app/main/default/objects/SBQQ__Quote__c/validationRules/Deal_type_cannot_be_null.validationRule-meta.xml
<ValidationRule>
        <fullName>Deal_type_cannot_be_null</fullName>
        <active>false</active>
        <description>Deal type cannot be null</description>
        <errorConditionFormula>Deal_Type__c = &quot;&quot;</errorConditionFormula>
        <errorMessage>Deal type cannot be null</errorMessage>
    </ValidationRule>