force-app/main/default/objects/SBQQ__Quote__c/validationRules/End_Date_Lock_For_Amendment_Quote.validationRule-meta.xml
<ValidationRule>
        <fullName>End_Date_Lock_For_Amendment_Quote</fullName>
        <active>true</active>
        <description>Quote End Date for Amended Quote is locked.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(SBQQ__EndDate__c),
ISPICKVAL(SBQQ__Type__c, &quot;Amendment&quot;)
)</errorConditionFormula>
        <errorMessage>End Date is locked on an Amended quote type.</errorMessage>
    </ValidationRule>