force-app/main/default/objects/SBQQ__Quote__c/validationRules/Opportunity_Closed_No_New_Quote.validationRule-meta.xml
<ValidationRule>
        <fullName>Opportunity_Closed_No_New_Quote</fullName>
        <active>true</active>
        <description>Opportunity Closed (Won or Lost). No new quote creation is allowed.</description>
        <errorConditionFormula>AND(
ISNEW(),
SBQQ__Opportunity2__r.IsClosed 
)</errorConditionFormula>
        <errorMessage>Opportunity is Closed. No new quote can be created.</errorMessage>
    </ValidationRule>