force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_Approved_Presented_before_Deny.validationRule-meta.xml
<ValidationRule>
        <fullName>Quote_Approved_Presented_before_Deny</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(SBQQ__Status__c) &amp;&amp; 
NOT((ISPICKVAL(PRIORVALUE(SBQQ__Status__c),&quot;Approved&quot;)) ||(ISPICKVAL(PRIORVALUE(SBQQ__Status__c),&quot;Presented&quot;))) &amp;&amp; TEXT(SBQQ__Status__c) =&quot;Denied&quot;</errorConditionFormula>
        <errorDisplayField>SBQQ__Status__c</errorDisplayField>
        <errorMessage>Cannot set status to Denied as Quote is not in status Approved or Presented.</errorMessage>
    </ValidationRule>