force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_must_be_Approved_before_Presenting.validationRule-meta.xml
<ValidationRule>
        <fullName>Quote_must_be_Approved_before_Presenting</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(SBQQ__Status__c) &amp;&amp;
NOT(ISPICKVAL(PRIORVALUE(SBQQ__Status__c),&quot;Approved&quot;))  &amp;&amp;  TEXT(SBQQ__Status__c) =&quot;Presented&quot;</errorConditionFormula>
        <errorDisplayField>SBQQ__Status__c</errorDisplayField>
        <errorMessage>Cannot set status to Presented as Quote is not in status Approved.</errorMessage>
    </ValidationRule>