force-app/main/default/objects/SBQQ__Quote__c/listViews/AMER_Finance_Quote.listView-meta.xml
<ListView>
        <fullName>AMER_Finance_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>AMER Finance</label>
        <queue>AMER_Finance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>