force-app/main/default/objects/SBQQ__Quote__c/listViews/AMER_Legal_Quote.listView-meta.xml
<ListView>
        <fullName>AMER_Legal_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>AMER - Legal Team</label>
        <queue>AMER_Legal</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>