force-app/main/default/objects/SBQQ__Quote__c/listViews/AMER_Sales_Geo_Quote.listView-meta.xml
<ListView>
        <fullName>AMER_Sales_Geo_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>AMER Sales Geo</label>
        <queue>AMER_Sales_Geo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>