force-app/main/default/objects/SBQQ__Quote__c/listViews/APAC_Finance_Quote.listView-meta.xml
<ListView>
        <fullName>APAC_Finance_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC Finance</label>
        <queue>APAC_Finance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>