force-app/main/default/objects/SBQQ__Quote__c/listViews/APAC_Legal_Quote.listView-meta.xml
<ListView>
        <fullName>APAC_Legal_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC - Legal Team</label>
        <queue>APAC_Legal</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>