force-app/main/default/objects/SBQQ__Quote__c/listViews/APAC_Sales_Geo_Quote.listView-meta.xml
<ListView>
        <fullName>APAC_Sales_Geo_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC Sales Geo</label>
        <queue>APAC_Sales_Geo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>