force-app/main/default/objects/SBQQ__Quote__c/listViews/CFO_CRO_CEO_Quote.listView-meta.xml
<ListView>
        <fullName>CFO_CRO_CEO_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>CFO CRO CEO</label>
        <queue>CFO_CRO_CEO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>