force-app/main/default/objects/SBQQ__Quote__c/listViews/EMEA_Finance_Quote.listView-meta.xml
<ListView>
        <fullName>EMEA_Finance_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>EMEA Finance</label>
        <queue>EMEA_Finance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>