force-app/main/default/objects/SBQQ__Quote__c/listViews/EMEA_Legal_Quote.listView-meta.xml
<ListView>
        <fullName>EMEA_Legal_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>EMEA - Legal Team</label>
        <queue>EMEA_Legal</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>