force-app/main/default/objects/SBQQ__Quote__c/listViews/EMEA_Sales_Geo_Quote.listView-meta.xml
<ListView>
        <fullName>EMEA_Sales_Geo_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>EMEA Sales Geo</label>
        <queue>EMEA_Sales_Geo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>