force-app/main/default/objects/SBQQ__Quote__c/listViews/Finance_Team_Japan_Quote.listView-meta.xml
<ListView>
        <fullName>Finance_Team_Japan_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance Team Japan</label>
        <queue>Finance_Team_Japan</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>