force-app/main/default/objects/SBQQ__Quote__c/listViews/India_Finance_Quote.listView-meta.xml
<ListView>
        <fullName>India_Finance_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>India Finance</label>
        <queue>India_Finance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>