force-app/main/default/objects/SBQQ__Quote__c/listViews/India_Legal_Quote.listView-meta.xml
<ListView>
        <fullName>India_Legal_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>India - Legal Team</label>
        <queue>India_Legal</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>