force-app/main/default/objects/SBQQ__Quote__c/listViews/India_Sales_Geo_Quote.listView-meta.xml
<ListView>
        <fullName>India_Sales_Geo_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>India Sales Geo</label>
        <queue>India_Sales_Geo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>