force-app/main/default/objects/SBQQ__Quote__c/listViews/Japan_Finance_Quote.listView-meta.xml
<ListView>
        <fullName>Japan_Finance_Quote</fullName>
        <filterScope>Queue</filterScope>
        <label>Japan Finance</label>
        <queue>Japan_Finance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>